fix overflow hero-img cause of height 100vh in .section-hero

--- a/css/style.css
+++ b/css/style.css
@@ -3,7 +3,6 @@
 
 .section-hero {
   background-color: #ffff80;
-  height: 100vh;
   padding: 10.8rem 0;
 }
 
